--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,11 +1,21 @@
-@use "../../styles/partials/global.scss";
-@use "../../styles/partials/mixins.scss";
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/global";
 
 
 .homepage {
     min-height: 60vh;
-    margin-top: 2rem;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
 
+    @include tablet {
+        padding: 1rem 1.5rem;
+    }
+
+    @include desktop {
+        @include desktop-margin;
+    }
     
 }
