--- a/src/styles/partials/typography.scss
+++ b/src/styles/partials/typography.scss
@@ -5,6 +5,12 @@
 }
 
 @font-face {
+    font-family: "Bebas";
+    font-weight: 600;
+    src: url(/src/assets/fonts/BebasNeue-Regular.ttf) format("truetype");
+}
+
+@font-face {
     font-family: "Raleway";
     font-weight: 700;
     src: url(/src/assets/fonts/Raleway-Bold.ttf) format("truetype");
