--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -4,29 +4,21 @@
 
 .hero {
     background-color: $background-color;
-    padding: 2rem 1rem;
+    padding: 2rem 0;
     color: $text-color;
+    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: relative;
+    gap: 8rem;
 
-    &__title {
-        font-family: "Pacifico";
-        text-align: center;
-        margin-bottom: 2rem;
-        -webkit-text-stroke: 2px $primary-color;
-
-        @include tablet {
-            text-align: left;
-        }
-    }
-
-    &__wrapper {
+    &__title-container {
         display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
+        gap: 2rem;
 
         @include tablet {
-            flex-direction: row;
+            // top: 60%;
         }
     }
 
@@ -34,25 +26,30 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-    @include tablet {
-        width: 60%;
-    }
-    }
-
-    &__image {
+        flex-wrap: wrap;
 
         @include tablet {
-            width: 40%;
-            @include flex-center;
+            width: 70%;
         }
     }
 
-    &__headshot {
-        height: 10rem;
-        border-radius: 50%;
+    &__text {
+        @include body-typo;
+    }
+
+    &__title {
+        -webkit-text-stroke: 2px $primary-color;
+        line-height: 1;
+        letter-spacing: 0.2rem;
+        font-size: 4rem;
+        min-height: 10rem;
 
         @include tablet {
-            height: 20rem;
+            font-size: 6rem;
         }
+    }
+
+    &__button {
+        width: 20rem;
     }
 }
