--- a/src/styles/partials/global.scss
+++ b/src/styles/partials/global.scss
@@ -13,6 +13,7 @@ body {
   background-color: $background-color;
   font-family: "Raleway";
   color: $text-color;
+  line-height: 1.5;
 }
 
 a {
@@ -24,7 +25,7 @@ ul {
 }
 
 h1 {
-  font-family: "Pacifico";
+  font-family: "Bebas";
   font-size: 2.5rem;
   line-height: 2rem;
   font-weight: 500;
@@ -32,4 +33,33 @@ h1 {
   @include tablet {
     font-size: 3.5rem;
   }
+}
+
+h2 {
+  font-family: "Bebas";
+  font-size: 1.75rem;
+  line-height: 1.3;
+  font-weight: 400;
+
+  @include tablet {
+    font-size: 2.25rem;
+  }
+}
+
+button {
+  font-family: "Raleway";
+  @include body-small;
+  background-color: $primary-color;
+  border: none;
+  border-radius: 0.25rem;
+  color: $background-color;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  margin-top: 3rem;
+  text-transform: uppercase;
+
+  &:hover {
+    background-color: darken($primary-color, 10%);
+    cursor: pointer;
+}
 }
