--- a/src/styles/partials/mixins.scss
+++ b/src/styles/partials/mixins.scss
@@ -19,18 +19,7 @@
   max-width: 1232px;
 }
   
-  @mixin subheader-typo {
-    font-family: "Raleway";
-    font-size: 1.75rem;
-    line-height: 2rem;
-    font-weight: 600;
-  
-    @include tablet {
-      font-size: 2.25rem;
-    }
-  }
-  
-  @mixin title-typo {
+  @mixin header-typo {
     font-family: "Raleway";
     font-size: 1.25rem;
     line-height: 2rem;
@@ -43,12 +32,12 @@
   
   @mixin body-typo {
     font-family: "Raleway";
-    font-size: 1rem;
+    font-size: 1.25rem;
     line-height: 1.3;
     font-weight: 400;
   
     @include tablet {
-      font-size: 1.25rem;
+      font-size: 1.5rem;
     }
   }
   
