--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: flex-start;
-    // align-items: center;
     margin: 2rem 1rem;
     padding-top: 2rem;
     gap: 2rem;
@@ -36,12 +35,16 @@
 
     &__item {
         display: flex;
-        gap: 1rem;
+        gap: 0.5rem;
         justify-content: center;
         align-items: center;
+        font-family: "Bebas";
+        font-size: 1.25rem;
+        color: $text-color;
+        cursor: pointer;
     }
 
     &__icon {
-        height: 2rem;
+        height: 1rem;
     }
 }
