--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -2,90 +2,93 @@
 @use "../../styles/partials/variables.scss" as *;
 @use "../../styles/partials/typography.scss" as *;
 
+.projects__wrapper {
+  display: flex;
+  flex-direction: column;
+
+  @include tablet {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
 .project-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: $background-color;
+  border: 2px solid $primary-color;
+  border-radius: 1.25rem;
+  padding: 2rem;
+  width: 80%;
+  height: 35rem;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+
+  @include tablet {
+    width: 60%;
+    height: 40rem;
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: opacity 0.3s ease-in-out;
+    padding: 1rem;
+    border-radius: 2rem;
+  }
+
+  &__details {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: $background-color;
-    border: 2px solid $primary-color;
-    border-radius: 1.25rem;
-    padding: 2rem;
-    width: 80%;
-    height: 35rem;
-    margin: 0 auto;
-    overflow: hidden;
-    position: relative;
-    cursor: pointer;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    text-align: center;
+    gap: 1rem;
+    color: $text-color;
+    padding: 1rem;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
 
-    @include tablet {
-        width: 50%;
-        height: 40rem;
-    }
+  &__logo {
+    width: 5rem;
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+  }
+
+  &:hover &__image {
+    opacity: 0;
+  }
+
+  &:hover &__details {
+    opacity: 1;
+  }
+
+  &__button {
+    width: 10rem;
+    padding: 0.5rem 1rem;
+    background-color: $primary-color;
+    color: $text-color;
+    border-radius: 0.25rem;
+    border: none;
+    transition: background-color 0.3s ease-in-out;
 
     &:hover {
-        transform: scale(1.05);
-        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-        z-index: 10;
+      background-color: darken($primary-color, 10%);
     }
-
-    &__image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        position: absolute;
-        top: 0;
-        left: 0;
-        transition: opacity 0.3s ease-in-out;
-        padding: 1rem;
-        border-radius: 2rem;
-    }
-
-    &__details {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        gap: 1rem;
-        color: $text-color;
-        padding: 1rem;
-        opacity: 0;
-        transition: opacity 0.3s ease-in-out;
-    }
-
-    &__logo {
-        width: 5rem;
-        position: absolute;
-        top: 2rem;
-        left: 2rem;
-    }
-
-    &:hover &__image {
-        opacity: 0;
-    }
-
-    &:hover &__details {
-        opacity: 1;
-    }
-
-    &__button {
-        width: 10rem;
-        padding: 0.5rem 1rem;
-        background-color: $primary-color;
-        color: $text-color;
-        border-radius: 0.25rem;
-        border: none;
-        transition: background-color 0.3s ease-in-out;
-
-        &:hover {
-            background-color: darken($primary-color, 10%);
-        }
-    }
+  }
 }
