--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -4,17 +4,11 @@
 
 .projects__wrapper {
   display: flex;
-  flex-direction: column;
-
-  @include tablet {
-    flex-direction: row;
-    justify-content: space-between;
-  }
+  justify-content: space-between;
 }
 
 .project-item {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: $background-color;
@@ -22,7 +16,7 @@
   border-radius: 1.25rem;
   padding: 2rem;
   width: 80%;
-  height: 35rem;
+  height: 30rem;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
@@ -80,15 +74,15 @@
 
   &__button {
     width: 10rem;
-    padding: 0.5rem 1rem;
-    background-color: $primary-color;
-    color: $text-color;
-    border-radius: 0.25rem;
-    border: none;
-    transition: background-color 0.3s ease-in-out;
+  }
 
-    &:hover {
-      background-color: darken($primary-color, 10%);
+  &__forward-arrow, 
+  &__back-arrow {
+    width: 1.5rem;
+    cursor: pointer;
+
+    @include tablet {
+      width: 2.5rem;
     }
   }
 }
