--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -15,7 +15,7 @@
   border: 2px solid $primary-color;
   border-radius: 1.25rem;
   padding: 2rem;
-  width: 80%;
+  width: 30rem;
   height: 30rem;
   margin: 0 auto;
   overflow: hidden;
@@ -23,45 +23,47 @@
   cursor: pointer;
 
   @include tablet {
-    width: 60%;
+    width: 40rem;
     height: 40rem;
   }
 
   &__image {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
     transition: opacity 0.3s ease-in-out;
     padding: 1rem;
-    border-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    border-bottom-left-radius: 2rem;
   }
 
   &__details {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
-    gap: 1rem;
-    color: $text-color;
     padding: 1rem;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
   }
 
   &__logo {
-    width: 5rem;
-    position: absolute;
-    top: 2rem;
-    left: 2rem;
+    position: relative;
+    width: 30rem;
+    height: 30rem;
+    padding: 1rem;
+    @include flex-center;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+
+    @include tablet {
+      width: 40rem;
+      height: 40rem;
+    }
   }
 
   &:hover &__image {
@@ -74,6 +76,8 @@
 
   &__button {
     width: 10rem;
+    position: absolute;
+    bottom: 3rem;
   }
 
   &__forward-arrow, 
