update style of ProjectDescription component

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -11,5 +11,17 @@
     &__name {
         margin-bottom: 1rem;
     }
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        flex-wrap: wrap;
+
+        @include tablet {
+            flex-direction: row;
+            justify-content: space-between;
+        }
+    }
 }
 
