--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -1,6 +1,9 @@
 $background-color: #2f4858;
 $text-color: #EEF5DB;
 $primary-color: #6bc6b4;
+$secondary-color: #ddefe0;
 
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
+
+$box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
