--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   flex-direction: column;
   margin-top: 2rem;
+  gap: 2rem;
   width: 100%;
 
   &__description {
@@ -38,8 +39,8 @@
     @include flex-center;
     flex-direction: column;
     text-align: center;
-    border: 0.5px solid $primary-color;
     border-radius: 0.5rem;
+    background-color: darken($background-color, 2%);
 
     @include desktop {
         padding: 1.5rem 1rem;
@@ -54,7 +55,8 @@
 
     &--reg {
       @include body-small;
-      color: darken($text-color, 10%);
+      color: darken($secondary-color, 10%);
+      text-transform: uppercase;
     }
   }
 
@@ -64,7 +66,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    border: 0.5px solid $primary-color;
+    background-color: darken($background-color, 2%);
     border-radius: 0.5rem;
 
     @include desktop {
@@ -73,7 +75,7 @@
   }
 
   &__tagline {
-    color: darken($text-color, 10%);
+    color: darken($secondary-color, 10%);
     font-size: 1.25rem;
     font-weight: 600;
     letter-spacing: 0.15rem;
