--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -2,91 +2,42 @@
 @use "../../styles/partials/variables.scss" as *;
 @use "../../styles/partials/typography.scss" as *;
 
-.projects__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
 .project-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  flex: 1 1 80%; 
+  transition: transform 0.3s ease-in-out;
+
+  @include tablet {
+    flex: 1 1 calc(33% - 1rem);
+  }
+
+  &:hover {
+    transform: scale(1.05);
+
+    @include tablet {
+      transform: scale(1.1);
+    }
+  }
+
+  &__front {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $background-color;
-  border: 2px solid $primary-color;
-  border-radius: 1.25rem;
-  padding: 2rem;
-  width: 30rem;
-  height: 30rem;
+  width: 100%;
+  aspect-ratio: 1 /1 ;
   margin: 0 auto;
-  overflow: hidden;
-  position: relative;
   cursor: pointer;
-
-  @include tablet {
-    width: 40rem;
-    height: 40rem;
-  }
+}
 
   &__image {
     width: 100%;
     height: auto;
     object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: opacity 0.3s ease-in-out;
     padding: 1rem;
     border-bottom-right-radius: 2rem;
     border-bottom-left-radius: 2rem;
-  }
-
-  &__details {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-  }
-
-  &__logo {
-    position: relative;
-    width: 30rem;
-    height: 30rem;
-    padding: 1rem;
-    @include flex-center;
-    border-top-left-radius: 2rem;
-    border-top-right-radius: 2rem;
-
-    @include tablet {
-      width: 40rem;
-      height: 40rem;
-    }
-  }
-
-  &:hover &__image {
-    opacity: 0;
-  }
-
-  &:hover &__details {
-    opacity: 1;
-  }
-
-  &__button {
-    width: 10rem;
-    position: absolute;
-    bottom: 3rem;
-  }
-
-  &__forward-arrow, 
-  &__back-arrow {
-    width: 1.5rem;
-    cursor: pointer;
-
-    @include tablet {
-      width: 2.5rem;
-    }
   }
 }
