add animation on AboutMe component

--- a/src/components/ProjectDescription/ProjectDescription.scss
+++ b/src/components/ProjectDescription/ProjectDescription.scss
@@ -104,7 +104,7 @@
     background-color: $text-color;
 
   &:hover {
-    background-color: darken($text-color, 10%);
+    background-color: $secondary-color;
   }
   }
 }
