--- a/src/components/TechStack/TechStack.scss
+++ b/src/components/TechStack/TechStack.scss
@@ -5,7 +5,8 @@
 .tech-stack {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    margin-top: 7rem;
+    gap: 1rem;
     width: 100%;
     padding: 2rem 0;
     
