--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -1,7 +1,9 @@
 $background-color: #2f4858;
+$about-color: #0f2b36;
 $text-color: #EEF5DB;
 $primary-color: #6bc6b4;
 $secondary-color: #ddefe0;
+
 
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
