--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  margin-top: 2rem;
+  margin-top: 7rem;
   gap: 1rem;
   width: 100%;
 
@@ -15,13 +15,13 @@
     flex-direction: column;
 
     @include desktop {
-        flex-direction: row;
-        gap: 1rem;
+      flex-direction: row;
+      gap: 1rem;
     }
   }
 
   &__list {
-    margin-top: 2rem;
+    margin-top: 5rem;
     display: flex;
     width: 100%;
     gap: 1rem;
@@ -40,14 +40,14 @@
     flex-direction: column;
     text-align: center;
     border-radius: 0.5rem;
-    background-color: darken($background-color, 2%);
+    background-color: $about-color;
 
     &:hover {
-      background-color: darken($background-color, 3%);
+      background-color: darken($about-color, 1%);
     }
 
     @include desktop {
-        padding: 1.5rem 1rem;
+      padding: 1.5rem 1rem;
     }
 
     &--bold {
@@ -70,15 +70,15 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-color: darken($background-color, 2%);
+    background-color: $about-color;
     border-radius: 0.5rem;
 
     &:hover {
-      background-color: darken($background-color, 3%);
+      background-color: darken($about-color, 1%);
     }
 
     @include desktop {
-        margin: 2rem 0 0 0;
+      margin: 5rem 0 0 0;
     }
   }
 
@@ -95,9 +95,15 @@
   }
 
   &__approach-wrapper {
-    background-color: #0f2b36;
-    padding: 1rem 5rem;
-    border-radius: 0.5rem;
+    @include tablet {
+      background-color: $about-color;
+      padding: 0.5rem;
+      border-radius: 0.5rem;
+      position: relative;
+    }
+    @include desktop {
+      padding: 1rem 5rem;
+    }
   }
 
   &__approach {
@@ -109,4 +115,37 @@
       cursor: pointer;
     }
   }
+
+  &__github {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: $about-color;
+    width: 100%;
+    height: 100%;
+    padding: 10px 15px;
+    border-radius: 0.5rem;
+    @include flex-center;
+    align-content: center;
+    gap: 2rem;
+    // opacity: 0;
+    // // transition: opacity s ease-in-out;
+  }
+
+  &__github-text {
+    font-size: 1.25rem;
+    font-weight: 600;
+    letter-spacing: 0.15rem;
+    color: $text-color;
+    text-transform: uppercase;
+  }
+
+  &__github-icon {
+    height: 2rem;
+  }
+}
+
+.about__approach-wrapper:hover .about__github {
+  opacity: 1;
 }
