--- a/src/components/PhotoCarousel/PhotoCarousel.scss
+++ b/src/components/PhotoCarousel/PhotoCarousel.scss
@@ -2,10 +2,19 @@
 @use "../../styles/partials/variables.scss" as *;
 @use "../../styles/partials/typography.scss" as *;
 
+.nutshell {
+  margin-top: 7rem;
+
+  &__description {
+    @include body-small;
+      color: darken($secondary-color, 10%);
+      text-transform: uppercase;
+  }
+}
 .carousel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-center;
+    margin-top: 7rem;
+    margin-bottom: 7rem;
     overflow: hidden;
     width: 100%;
     height: 25rem;
