update download button in resume page

--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -7,10 +7,10 @@
     flex-direction: column;
     gap: 2rem;
     padding: 3rem 2rem;
-    border: 1px solid $primary-color;
-    border-top-right-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
+    // border: 1px solid $primary-color;
+    // border-top-right-radius: 0.5rem;
+    // border-bottom-right-radius: 0.5rem;
+    // border-bottom-left-radius: 0.5rem;
 
     &__position {
         display: flex;
@@ -34,11 +34,5 @@
             width: 80%;
             padding-left: 4rem;
         }
-    }
-
-    &__button {
-        width: 3rem;
-        @include flex-center;
-        gap: 0.25rem;
     }
 }
