--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -3,36 +3,68 @@
 @use "../../styles/partials/typography.scss" as *;
 
 .experience {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 3rem 2rem;
+  box-shadow: $box-shadow;
+  border-radius: 0.5rem;
+  margin-top: 2rem;
+
+  &__position {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    padding: 3rem 2rem;
-    // border: 1px solid $primary-color;
-    // border-top-right-radius: 0.5rem;
-    // border-bottom-right-radius: 0.5rem;
-    // border-bottom-left-radius: 0.5rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid rgba(221, 239, 224, 0.2);
+  }
 
-    &__position {
-        display: flex;
-        flex-direction: column;
+  &__role {
+    color: $primary-color;
+  }
+
+  &__timeframe {
+    margin-bottom: 1rem;
+  }
+
+  &__achievements {
+    list-style-type: disc;
+    padding-left: 1rem;
+    width: 100%;
+
+    @include tablet {
+      width: 80%;
+      padding-left: 4rem;
+    }
+  }
+
+  &__skills-list {
+    display: none;
+
+    @include tablet {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      flex-direction: column;
+      margin-top: 2rem;
+      flex-direction: row;
+      justify-content: flex-start;
+    }
+  }
+
+  &__skills-item {
+    @include tablet {
+      @include flex-center;
+      padding: 0.25rem 1rem;
+      text-transform: uppercase;
+      border-right: 1px solid rgba(221, 239, 224, 0.2);
+
+      &:first-child {
+        border-left: 1px solid rgba(221, 239, 224, 0.2);
+      }
     }
 
-    &__role {
-        color: $primary-color;
+    &:hover {
+      color: darken($text-color, 5%);
     }
-
-    &__timeframe {
-        margin-bottom: 1rem;
-    }
-
-    &__achievements {
-        list-style-type: disc;
-        padding-left: 1rem;
-        width: 100%;
-
-        @include tablet {
-            width: 80%;
-            padding-left: 4rem;
-        }
-    }
+  }
 }
