--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -39,6 +39,7 @@
     padding: 1rem;
     border-bottom-right-radius: 2rem;
     border-bottom-left-radius: 2rem;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);;
   }
 }
 
