--- a/src/pages/ResumePage/ResumePage.scss
+++ b/src/pages/ResumePage/ResumePage.scss
@@ -49,24 +49,34 @@
 
     &__nav {
         display: flex;
+        justify-content: center;
         align-items: flex-end;
         margin-top: 2rem;
+        gap: 2rem;
+
+        @include tablet {
+            justify-content: flex-start
+        }
     }
 
     &__nav-item {
         @include body-typo;
         text-transform: uppercase;
-        padding: 0.5rem 2rem;
+        color: darken($secondary-color, 10%);
+        font-weight: 600;
+        padding: 0.5rem 1rem;
+        border-radius: 0.5rem;
 
         &:hover {
             color: darken($primary-color, 10%);
+            font-weight: 600;
             cursor: pointer;
         }
 
         &--active {
-            text-decoration: underline;
             color: darken($primary-color, 10%);
             font-weight: 700;
+            box-shadow: $box-shadow;
         }
     }
 }
