--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -3,6 +3,7 @@ $about-color: #0f2b36;
 $text-color: #EEF5DB;
 $primary-color: #6bc6b4;
 $secondary-color: #ddefe0;
+$invalid-color: #d9534f;
 
 
 $tablet-breakpoint: 768px;
