--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  margin-top: 7rem;
+  margin-top: 5rem;
   gap: 1rem;
   width: 100%;
 
@@ -133,8 +133,6 @@
     @include flex-center;
     align-content: center;
     gap: 2rem;
-    // opacity: 0;
-    // // transition: opacity s ease-in-out;
   }
 
   &__github-text {
@@ -152,4 +150,5 @@
 
 .about__approach-wrapper:hover .about__github {
   opacity: 1;
+  transition: background-color 3s ease-in-out;
 }
