--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -11,14 +11,15 @@
   transition: transform 0.3s ease-in-out;
 
   @include tablet {
-    flex: 1 1 calc(33% - 1rem);
+    flex: 1 1 calc(33% - 2rem);
   }
 
   &:hover {
     transform: scale(1.05);
+    outline: 0;
 
     @include tablet {
-      transform: scale(1.1);
+      transform: scale(1.07);
     }
   }
 
@@ -27,7 +28,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  aspect-ratio: 1 /1 ;
+  aspect-ratio: 1 / 1 ;
   margin: 0 auto;
   cursor: pointer;
 }
@@ -37,9 +38,8 @@
     height: auto;
     object-fit: cover;
     padding: 1rem;
-    border-bottom-right-radius: 2rem;
-    border-bottom-left-radius: 2rem;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);;
+    border-radius: 2rem;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   }
 }
 
