--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -5,8 +5,7 @@
 .projects {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    margin-top: 7rem;
+    margin-top: 5rem;
 
     &__name {
         margin-bottom: 1rem;
@@ -14,14 +13,16 @@
 
     &__list {
         display: flex;
-        margin-top: 5rem;
+        margin: 5rem auto 0 auto;
+        width: 75%;
         flex-direction: column;
-        gap: 1rem;
+        gap: 2rem;
         flex-wrap: wrap;
 
         @include tablet {
             flex-direction: row;
             justify-content: space-between;
+            width: 100%;
         }
     }
 }
