adjust padding on hero

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -4,7 +4,7 @@
 
 .hero {
     background-color: $background-color;
-    padding: 2rem 0;
+    // padding: 2rem 0;
     color: $text-color;
     height: 95vh;
     display: flex;
