fixes for mobile design

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -4,7 +4,7 @@
 
 .hero {
     background-color: $background-color;
-    // padding: 2rem 0;
+    padding: 4rem 0 0 0;
     color: $text-color;
     height: 95vh;
     display: flex;
@@ -37,7 +37,7 @@
         -webkit-text-stroke: 2px $primary-color;
         line-height: 1;
         letter-spacing: 0.2rem;
-        font-size: 4rem;
+        font-size: 3.5rem;
         min-height: 10rem;
 
         @include tablet {
