--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -48,6 +48,11 @@
     &__button {
         width: 20rem;
         box-shadow: $box-shadow;
+        margin-top: 1.5rem;
+
+        @include tablet {
+            margin-top: 3rem;
+        }
     }
 }
 
