--- a/src/components/ProjectDescription/ProjectDescription.scss
+++ b/src/components/ProjectDescription/ProjectDescription.scss
@@ -53,10 +53,7 @@
   }
 
   &__wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: rem;
+    @include flex-center;
   }
 
   &__intro {
