--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -10,3 +10,5 @@ $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
 $box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+$border-radius: 0.5rem;
+$primary-border: 1px solid $primary-color;
