--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -39,9 +39,9 @@
     @include flex-center;
     flex-direction: column;
     text-align: center;
-    border-radius: 0.5rem;
+    border-radius: $border-radius;
     background-color: $about-color;
-      box-shadow: $box-shadow;
+    box-shadow: $box-shadow;
 
     &:hover {
       background-color: darken($about-color, 1%);
@@ -52,10 +52,7 @@
     }
 
     &--bold {
-      font-size: 1.25rem;
-      font-weight: 600;
-      letter-spacing: 0.15rem;
-      text-transform: uppercase;
+      @include tagline-typo;
     }
 
     &--reg {
@@ -72,8 +69,8 @@
     flex-direction: column;
     gap: 1rem;
     background-color: $about-color;
-    border-radius: 0.5rem;
-      box-shadow: $box-shadow;
+    border-radius: $border-radius;
+    box-shadow: $box-shadow;
 
     &:hover {
       background-color: darken($about-color, 1%);
@@ -86,10 +83,7 @@
 
   &__tagline {
     color: darken($secondary-color, 10%);
-    font-size: 1.25rem;
-    font-weight: 600;
-    letter-spacing: 0.15rem;
-    text-transform: uppercase;
+    @include tagline-typo;
   }
 
   &__coding {
@@ -100,7 +94,7 @@
     @include tablet {
       background-color: $about-color;
       padding: 0.5rem;
-      border-radius: 0.5rem;
+      border-radius: $border-radius;
       position: relative;
       box-shadow: $box-shadow;
     }
@@ -129,18 +123,15 @@
     width: 100%;
     height: 100%;
     padding: 10px 15px;
-    border-radius: 0.5rem;
+    border-radius: $border-radius;
     @include flex-center;
     align-content: center;
     gap: 2rem;
   }
 
   &__github-text {
-    font-size: 1.25rem;
-    font-weight: 600;
-    letter-spacing: 0.15rem;
+    @include tagline-typo;
     color: $text-color;
-    text-transform: uppercase;
   }
 
   &__github-icon {
