--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -8,7 +8,7 @@
   gap: 2rem;
   padding: 3rem 2rem;
   box-shadow: $box-shadow;
-  border-radius: 0.5rem;
+  border-radius: $border-radius;
   margin-top: 2rem;
 
   &__position {
