--- a/src/components/PhotoCarousel/PhotoCarousel.scss
+++ b/src/components/PhotoCarousel/PhotoCarousel.scss
@@ -22,10 +22,8 @@
   }
   
   .carousel__track {
-    display: flex;
+    @include flex-center;
     position: relative;
-    justify-content: center;
-    align-items: center;
     width: 100%;
   }
   
@@ -36,8 +34,8 @@
     object-fit: cover;
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
     cursor: pointer;
-    border-radius: 0.5rem;
-    border: 1px solid $primary-color;
+    border-radius: $border-radius;
+    border: $primary-border;
 
     @include tablet {
       width: 10rem;
