create TechStackModal to dive deeper into skillset

--- a/src/components/TechStack/TechStack.scss
+++ b/src/components/TechStack/TechStack.scss
@@ -3,47 +3,59 @@
 @use "../../styles/partials/typography.scss" as *;
 
 .tech-stack {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5rem;
+  gap: 1rem;
+
+  &__carousel {
     display: flex;
     flex-direction: column;
-    margin-top: 7rem;
     gap: 1rem;
     width: 100%;
-    padding: 2rem 0;
-    
-    &__wrapper {
-        display: flex;
-        width: 100%;
-        overflow: hidden;
-        position: relative;
+    padding-bottom: 2rem;
+  }
 
-        &:hover {
-            animation-play-state: paused;
-        }
+  &__wrapper {
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+
+    &:hover {
+      animation-play-state: paused;
     }
+  }
 
-    &__list {
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
-        width: max-content;
-        animation: scrollLeft 60s linear infinite;
-        transition: animation-play-state 2s ease-in-out;
+  &__list {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    width: max-content;
+    animation: scrollLeft 60s linear infinite;
+    transition: animation-play-state 2s ease-in-out;
 
-        &:hover {
-            animation-play-state: paused;
-        }
+    &:hover {
+      animation-play-state: paused;
     }
+  }
+
+  &__button {
+    width: 20rem;
+    box-shadow: $box-shadow;
+    margin-top: 1.5rem;
+  }
 }
 
 .dragging {
-    animation: none !important;
-  }
+  animation: none !important;
+}
 
 @keyframes scrollLeft {
-    from {
-      transform: translateX(0%);
-    }
-    to {
-      transform: translateX(-50%);
-    }
+  from {
+    transform: translateX(0%);
   }
+  to {
+    transform: translateX(-50%);
+  }
+}
