--- a/src/pages/ResumePage/ResumePage.scss
+++ b/src/pages/ResumePage/ResumePage.scss
@@ -4,7 +4,7 @@
 
 
 .resume {
-    min-height: 90vh;
+    min-height: 90dvh;
     padding: 7rem 1rem 0 1rem;
     margin-bottom: 4rem;
     display: flex;
