--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -56,6 +56,14 @@
     @include flex-center;
     gap: 0.5rem;
     cursor: pointer;
+
+    &--tablet {
+      display: none;
+
+      @include tablet {
+        @include flex-center;
+      }
+    }
   }
 
   &__text {
