unify margin and add details to about me section

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -6,7 +6,7 @@
     background-color: $background-color;
     padding: 8rem 0 0 0;
     color: $text-color;
-    height: 120vh;
+    height: 120dvh;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -14,7 +14,7 @@
     gap: 8rem;
 
     @include tablet {
-        height: 100vh;
+        height: 110dvh;
     }
 
     &__title-container {
